# cozy

./: .README.md.swp  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  prj.conf
include/cozy/: common.h  cose.h  shared.h
src/: common.c  cose.c  cose.h  encode.c  encode.h  encrypt.c  mac.c  main.c  shared.c  shared.h  sign.c  test_vectors.h  tests.c  unit_tests.c  vectors.h
tests/: CMakeLists.txt  prj.conf  testcase.yaml
tests/src/: main.c  tests.c  vectors.h
zephyr/: Kconfig
